--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,7 @@
     <packaging>war</packaging>
     <version>1.0.0-BUILD-SNAPSHOT</version>
     <properties>
-        <java-version>1.7</java-version>
         <spring-version>3.2.9.RELEASE</spring-version>
-        <!--<spring-version>4.0.3.RELEASE</spring-version>-->
         <hibernate-version>4.2.7.Final</hibernate-version>
         <mysql-version>5.1.27</mysql-version>
         <apache-connection-pooling-version>1.4</apache-connection-pooling-version>
@@ -47,9 +45,6 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate-version}</version>
         </dependency>
-
-        <!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-commons-annotations</artifactId>
-            <version>3.3.0.ga</version> </dependency> -->
 
         <!-- Apache's Database Connection Pooling -->
         <dependency>
@@ -89,50 +84,44 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        <!--jUnit-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>2.0.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.1.5.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
     <build>
         <plugins>
-            <!-- Tomcat 7 plugin -->
+            <!-- Tomcat plugin -->
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
             </plugin>
             <plugin>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.9</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <additionalProjectnatures>
-                        <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
-                    </additionalProjectnatures>
-                    <additionalBuildcommands>
-                        <buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
-                    </additionalBuildcommands>
-                    <downloadSources>true</downloadSources>
-                    <downloadJavadocs>true</downloadJavadocs>
+                    <source>7</source>
+                    <target>7</target>
                 </configuration>
             </plugin>
-            <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1
-        </version>
-            <configuration>
-                <source>1.6</source>
-                <target>1.6</target>
-                <compilerArgument>-Xlint:all</compilerArgument>
-                <showWarnings>true</showWarnings>
-                <showDeprecation>true</showDeprecation>
-            </configuration>
-        </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
-                <configuration>
-                    <mainClass>org.test.int1.Main</mainClass>
-                </configuration>
-            </plugin>
-            -->
 
         </plugins>
     </build>
