--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,12 @@
 *.ipr
 Temp*
 RationalValues*
+compiler.xml
+encodings.xml
+misc.xml
+uiDesigner.xml
+vcs.xml
+workspace.xml
 
 ### NetBeans ###
 /nbproject/private/
