--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,8 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+
+
         <!--jUnit-->
         <dependency>
             <groupId>junit</groupId>
@@ -120,6 +122,8 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
+        <!--JACKSON-->
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -130,16 +134,6 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.4.1.1</version>
         </dependency>
-
-
-        <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-test</artifactId>-->
-            <!--<version>3.2.9.RELEASE</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-
 
     </dependencies>
     <build>
